
// src/models/Service.js

 class Service {
    constructor(serviceName, duration, price, category) {
      this.serviceName = serviceName;
      this.duration = duration;
      this.price = price;
      this.category = category;
    }
  }

export default Service;